--- a/gui/skin/qss/GB.qss
+++ b/gui/skin/qss/GB.qss
@@ -220,6 +220,15 @@ QLineEdit:hover{
 }
 /*******************QLineEdit****************************/
 
+/*******************QTextEdit*****************************/
+QTextEdit{
+    color: white;
+    background-color:rgb(47, 54, 65);
+    font-size: 12px;
+    font-family: "Verdana";
+    border: none;
+}
+/*******************QTextEdit****************************/
 
 /*******************QToolButton****************************/
 QToolButton{
@@ -558,3 +567,7 @@ QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal {
 }
 
 /*******************QScrollBar*****************************/
+
+QLabel#FTableItemDetailWidgetTitlebar{
+    background-color: rgb(40, 47, 63);
+}
