--- a/gui/skin/qss/BB.qss
+++ b/gui/skin/qss/BB.qss
@@ -10,6 +10,7 @@ email: dragondjf@gmail.com
 QMainWindow{
     background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:1, fx:0.5, fy:0.5, stop:0 rgba(119, 255, 255, 255), stop:1 rgba(32, 127, 155, 255));
     /*border-image: url(gui/skin/images/bear.jpg)*/
+    border-radius: 5px;
 }
 /*********************QMainWindow***********************/
 
@@ -17,6 +18,8 @@ QMainWindow{
 /*********************QFrame****************************/
 QFrame#FloatWidget{
     background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:1, fx:0.5, fy:0.5, stop:0 rgba(119, 255, 255, 255), stop:1 rgba(32, 127, 155, 255));
+    border: 2px solid white;
+    border-radius: 10px;
 }
 /*********************QFrame****************************/
 
@@ -29,6 +32,8 @@ QFrame#FloatWidget{
 QDockWidget {
     color: white;
     background-color: rgb(40, 47, 63);
+    border: 2px solid white;
+    border-radius: 10px;
 }
 
 QDockWidget::title {
