--- a/gui/skin/qss/BW.qss
+++ b/gui/skin/qss/BW.qss
@@ -223,44 +223,44 @@ QTextEdit{
 /*******************QTextEdit****************************/
 
 
-/*******************QToolButton****************************/
-QToolButton{
+/*******************QPushButton#BaseToolButton****************************/
+QPushButton#BaseToolButton{
     background-color: transparent;
     color: rgb(92, 113, 134);
 }
 
 
-QToolButton:hover{
+QPushButton#BaseToolButton:hover{
     background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(33, 50, 70, 255), stop:1 rgba(255, 255, 255, 255));
     color: white;
     border: 1px;
 }
 
-QToolButton:disabled{
+QPushButton#BaseToolButton:disabled{
     background-color: gray;
     border: 1px;
 }
 
-QToolButton[popupMode="1"] { /* only for MenuButtonPopup */
+QPushButton#BaseToolButton[popupMode="1"] { /* only for MenuButtonPopup */
     padding-right: 0px; /* make way for the popup button */
 }
 
-QToolButton::menu-button {
+QPushButton#BaseToolButton::menu-button {
     border: none;
 }
 
-QToolButton::menu-arrow {
+QPushButton#BaseToolButton::menu-arrow {
     image: none;
 }
 
-QToolButton::menu-indicator {
+QPushButton#BaseToolButton::menu-indicator {
     image: none;
 }
 
-QToolButton:open { /* when the button has its menu open */
+QPushButton#BaseToolButton:open { /* when the button has its menu open */
     background-color: rgb(34, 44, 56);
 }
-/*******************QToolButton****************************/
+/*******************QPushButton#BaseToolButton****************************/
 
 
 
